[project]
name = "ansitable"
version = "0.9.9"
authors = [{ name = "Peter Corke", email = "rvc@petercorke.com" }]

dependencies = ["colored"]
license = { file = "LICENSE" }

description = "Quick and easy display of tabular data and matrices with optional ANSI color and borders"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "table",
    "table layout",
    "table format",
    "tabular",
    "tabular layout",
    "tabular format",
    "ANSI",
    "ANSI art",
    "ANSI box characters",
    "color",
    "ANSI color",
    "matrix format",
]


[project.urls]
"Homepage" = "https://github.com/petercorke/ansitable"
"Bug Tracker" = "https://github.com/petercorke/ansitable/issues"
"Documentation" = "https://github.com/petercorke/ansitable"
"Source" = "https://github.com/petercorke/ansitable"

[project.optional-dependencies]


[build-system]

requires = ["setuptools"]
#requires = ['setuptools==63.4.3']
build-backend = "setuptools.build_meta"

[tool.setuptools]

packages = ["ansitable"]

[tool.black]
line-length = 88
target-version = ['py37']
